[tool.poetry]
name = "my-blog"
version = "0.1.0"
description = ""
authors = ["LeeSeongHyun <leesh7248@gmail.com>"]
readme = "README.md"
packages = [{include = "my_blog"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
